<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:summary="@string/pref_location_default"
        android:inputType="number"
        android:numeric="integer" />

    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:title="@string/pref_units_label"
        android:summary="@string/pref_units_default"
        android:entries="@array/temp_units_labels"
        android:entryValues="@array/temp_units"
        android:key="@string/pref_units_key" />

</PreferenceScreen>